# server/src/services/firebase.ts
@@ -1,4 +1,17 @@
 import { CreateRequest, firebaseAuth, UpdateRequest } from "../providers";
+import { IToken } from "../models";
+import { RoleType } from "../utils/enums";
+
+export async function createToken(token: IToken) {
+  return await firebaseAuth.setCustomUserClaims(token.uid || String.empty, {
+    id: token.id || String.empty,
+    role: token.role || RoleType.User
+  });
+}
+
+export async function verifyToken(token: string) {
+  return await firebaseAuth.verifyIdToken(token);
+}
 
 export async function getAuthUser(uid: string) {
   return await firebaseAuth.getUser(uid);
